--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
+pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
